--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
         </div>
         <ul>
           <li>
-          	<img src="#" alt="Фото перфоратора">
+          	<img src="img/popular-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="past-price">32500 Р.</span>
             <span class="actual-price">25500 Р.</span>
           </li>
           <li>
-          	<img src="#" alt="Фото перфоратора">
+          	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
           </li>    
           <li>
-          	<img src="#" alt="Фото перфоратора">
+          	<img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
           </li>   
           <li>
-          	<img src="#" alt="Фото перфоратора">
+          	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
           </li>
@@ -112,28 +112,28 @@
         </div>
         <ul class="brands-list">
           <li>
-            <a href="#"><img src="#" alt="Bosch"></a>
+            <a href="#"><img src="img/bosch.jpg" alt="Bosch"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="Makita"></a>
+            <a href="#"><img src="img/makita.jpg" alt="Makita"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="DeWALT"></a>
+            <a href="#"><img src="img/dewalt.jpg" alt="DeWALT"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="Интерскол"></a>
+            <a href="#"><img src="img/interskol.jpg" alt="Интерскол"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="Hitachi"></a>
+            <a href="#"><img src="img/hitachi.jpg" alt="Hitachi"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="LG"></a>
+            <a href="#"><img src="img/lg.jpg" alt="LG"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="AEG Power Solutions"></a>
+            <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions"></a>
           </li>
           <li>            
-            <a href="#"><img src="#" alt="Metabo work. don't play."></a>
+            <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play."></a>
           </li>
         </ul>
       </section>
@@ -150,15 +150,15 @@
             <ul>
               <li>
                 <h3>Доставка</h3>
-                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+                <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
               </li>
               <li>
                 <h3>Гарантия</h3>
-                <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+                <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
               </li>
               <li>
                 <h3>Кредит</h3>
-                <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+                <p>Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь.</p>
                 <a class="link credit" href="#">Отправить заявку</a>
               </li>
             </ul>
@@ -181,7 +181,7 @@
         <div class="about-contacts">
           <h3>Контакты</h3>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="map" href="#">Карта</a>
+          <a class="map" href="#"><img src="img/map.jpg" alt="Карта"></a>
           <a class="link about-form" href="#">Заблудились? Напишите нам!</a>
         </div>
       </section>
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p class="rights">© 2010–2017 Компания «Техномарт»<br>
+        <p class="rights">© 2010–2017 Компания «Техномарт»
         Все права защищены</p>
         <ul class="social">
           <li><a class="vk" href="#">Вконтакте</a></li>
