--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
         </div>
         <ul class="catalog-items">
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
@@ -89,7 +89,7 @@
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
@@ -97,14 +97,14 @@
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
             <a class="buy" href="#">Купить</a>
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
@@ -112,7 +112,7 @@
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
@@ -120,14 +120,14 @@
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
             <a class="buy" href="#">Купить</a>
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
@@ -135,7 +135,7 @@
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
@@ -143,7 +143,7 @@
             <a class="bookmark" href="#">В закладки</a>
           </li>
           <li>
-            <img src="#" alt="Фото перфоратора">
+            <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
             <a class="buy" href="#">Купить</a>
@@ -186,7 +186,7 @@
         </nav>
       </div>
       <div class="copyright">
-        <p class="rights">© 2010–2017 Компания «Техномарт»<br>
+        <p class="rights">© 2010–2017 Компания «Техномарт»
         Все права защищены</p>
         <ul class="social">
           <li><a class="vk" href="#">Вконтакте</a></li>
