--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
       	<a class="main-header-logo">
           <img src="#" alt="Логотип Техномарта">
         </a>
-        <a class="search" href="#">Поиск</a>
+        <form class="search-form" action="https://echo.htmlacademy.ru">
+          <label class="visually-hidden" for="search">Поиск по сайту</label>
+          <input type="search" name="search" id="search" placeholder="Поиск:">
+        </form>
         <a class="bookmark" href="#">Закладки: 0</a>
         <a class="cart" href="#">Корзина: 0</a>
-        <a class="make-order" href="#">Оформить заказ</a>
+        <button class="make-order">Оформить заказ</button>
        </div> 
        <div class="bottom-menu">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -64,6 +67,8 @@
               <a class="link" href="#">Открыть каталог</a>
             </li>
           </ul>
+          <button class="button slider-back" type="button">Назад</button>
+          <button class="button slider-next" type="button">Вперед</button>
         </div>
         <div class="item">
           <h3>Скидки 50%</h3>
@@ -142,9 +147,9 @@
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="slider">          
           <ul>
-            <li>Доставка</li>
-            <li>Гарантия</li>
-            <li>Кредит</li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Кредит</a></li>
           </ul>         
           <div class="slider-content">
             <ul>
@@ -152,11 +157,11 @@
                 <h3>Доставка</h3>
                 <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
               </li>
-              <li>
+              <li class="visually-hidden">
                 <h3>Гарантия</h3>
                 <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
               </li>
-              <li>
+              <li class="visually-hidden">
                 <h3>Кредит</h3>
                 <p>Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь.</p>
                 <a class="link credit" href="#">Отправить заявку</a>
@@ -180,8 +185,8 @@
         </div>
         <div class="about-contacts">
           <h3>Контакты</h3>
-          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="map" href="#"><img src="img/map.jpg" alt="Карта"></a>
+          <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
+          <a class="map" href="#"><img src="img/map.jpg" alt="Карта"></a>          
           <a class="link about-form" href="#">Заблудились? Напишите нам!</a>
         </div>
       </section>
@@ -220,5 +225,33 @@
         <p class="developer">Разработано — htmlacademy.ru</p>
       </div>
     </footer>
+    <section class="modal modal-feedback">
+      <div class="feedback">
+        <h2 class="visually-hidden">Обратная связь</h2>
+        <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+          <div class="login-form">
+            <div>
+              <label for="feedback-login">Ваше имя:</label>
+              <input class="feedback-login-field" id="feedback-login" type="text" name="login" placeholder="Имя Фамилия"  required>
+            </div>
+            <div>
+              <label for="feedback-email">Ваш e-mail:</label>
+              <input class="feedback-email-field" id="feedback-email" type="email" name="email" placeholder="email@example.com"  required>
+            </div>
+          </div>
+          <div class="letter-form">
+            <label for="feedback-letter">Текст письма:</label>
+            <textarea class="feedback-letter-field" id="feedback-letter" placeholder="В свободной форме"></textarea>
+          </div>
+          <input class="button" type="submit" value="Отправить">
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
+      </div>
+    </section>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Карта</h2>
+      <img src="img/full_map.png" alt="Карта">
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
   </body>
 </html>
