--- a/catalog.html
+++ b/catalog.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог Техномарта</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   	<header class="main-header">
       <div class="top-menu">
-        <a class="main-header-logo">
-          <img src="#" alt="Логотип Техномарта">
-        </a>
+        <a class="main-header-logo" href="#">Техномарт</a>
         <form class="search-form" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search">Поиск по сайту</label>
           <input type="search" name="search" id="search" placeholder="Поиск:">
+          <input type="submit" value="Найти">
         </form>
         <a class="bookmark" href="#">Закладки: 0</a>
         <a class="cart" href="#">Корзина: 0</a>
@@ -20,8 +22,10 @@
       </div> 
       <div class="bottom-menu">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
-        <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <div class="info">
+          <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
+          <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
         <div class="user-navigation">
           <a class="user-name" href="#">Равшан Джамшутович</a>
           <button class="logout">Выйти</button>
@@ -53,7 +57,7 @@
       <h2 class="catalog-current-page">Перфораторы</h2>
       <section class="filters">
         <h3>Фильтр:</h3>
-        <form class="filter" method="get" action="#">
+        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="price-filter">
               <legend>Цена:</legend>
               <div class="range-filter">
@@ -65,46 +69,46 @@
                   <div class="toggle toggle-max"></div>
                 </div>
                 <div class="price-controls">
-                  <label class="min-price"><input name="min-price" type="text" value="0"></label>
+                  <label class="min-price"><input name="min-price" type="text" value="0"></label> -
                   <label class="max-price"><input name="max-price" type="text" value="30000"></label>
                 </div>
               </div>  
           </fieldset>
           <fieldset class="brand-filter">
-            <legend>Производители</legend>
+            <legend>Производители:</legend>
             <ul>
               <li>
                 <input class="filter-input-checkbox" type="checkbox" name="bosch-id" id="filter-bosch-id" checked>
-                <label for="filter-bosch-id"><span>Bosch</span></label>
+                <label for="filter-bosch-id">Bosch</label>
               </li>
               <li>
                 <input class="filter-input-checkbox" type="checkbox" name="interskol-id" id="filter-interskol-id">
-                <label for="filter-interskol-id"><span>Интерскол</span></label>
+                <label for="filter-interskol-id">Интерскол</label>
               </li>
               <li>
                 <input class="filter-input-checkbox" type="checkbox" name="makita-id" id="filter-makita-id" checked>
-                <label for="filter-makita-id"><span>Makita</span></label>
+                <label for="filter-makita-id">Makita</label>
               </li>
               <li>
                 <input class="filter-input-checkbox" type="checkbox" name="dewalt-id" id="filter-dewalt-id">
-                <label for="filter-dewalt-id"><span>DeWALT</span></label>
+                <label for="filter-dewalt-id">DeWALT</label>
               </li>
               <li>
                 <input class="filter-input-checkbox" type="checkbox" name="hitachi-id" id="filter-hitachi-id">
-                <label for="filter-hitachi-id"><span>Hitachi</span></label>
+                <label for="filter-hitachi-id">Hitachi</label>
               </li>
             </ul>
           </fieldset>
           <fieldset class="type-filter">
-            <legend>Питание</legend>
+            <legend>Питание:</legend>
             <ul>
               <li>
                 <input class="filter-input-radio" type="radio" name="grid" value="accumulator" id="filter-accumulator" checked>
-                <label for="filter-accumulator"><span>Аккумуляторные</span></label>
+                <label for="filter-accumulator">Аккумуляторные</label>
               </li>
               <li>
                 <input class="filter-input-radio" type="radio" name="grid" value="network" id="filter-network">
-                <label for="filter-network"><span>Сетевые</span></label>
+                <label for="filter-network">Сетевые</label>
               </li>
             </ul>
           </fieldset>
@@ -128,69 +132,87 @@
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>              
           </li>
           <li>
             <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
             <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
-            <a class="buy" href="#">Купить</a>
-            <a class="bookmark" href="#">В закладки</a>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
         </ul>
         <ul class="pages">
@@ -208,9 +230,7 @@
     </main>
     <footer class="main-footer">
       <div class="footer-information">
-        <a class="main-header-logo">
-          <img src="#" alt="Логотип Техномарта">
-        </a>
+        <a class="main-footer-logo" href="#">Техномарт</a>
         <p class="main-footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7(812)555-05-55</p>
         <nav class="footer-navigation">
           <ul class="main-footer-navigation">
@@ -236,8 +256,8 @@
           <li><a class="fb" href="#">Facebook</a></li>
           <li><a class="insta" href="#">Instagram</a></li>
         </ul>
-        <p class="feedback">Обратная связь: mail@htmlacademy.ru</p>
-        <p class="developer">Разработано — htmlacademy.ru</p>
+        <p class="feedback">Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
+        <p class="developer">Разработано — <a href="#">htmlacademy.ru</a></p>
       </div>
     </footer>
     <section class="modal modal-cart">
