--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   	<header class="main-header">
       <div class="top-menu">
-      	<a class="main-header-logo">
-          <img src="#" alt="Логотип Техномарта">
-        </a>
+      	<a class="main-header-logo" href="#">Техномарт</a>
         <form class="search-form" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search">Поиск по сайту</label>
           <input type="search" name="search" id="search" placeholder="Поиск:">
+          <input type="submit" value="Найти">
         </form>
         <a class="bookmark" href="#">Закладки: 0</a>
         <a class="cart" href="#">Корзина: 0</a>
@@ -20,8 +22,10 @@
        </div> 
        <div class="bottom-menu">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
-        <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <div class="info">
+          <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
+          <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
         <div class="user-navigation">
           <a class="login-link" href="#">Войти</a>
           <a class="registration-link" href="#">Регистрация</a>
@@ -42,15 +46,15 @@
     <main>
       <section class="features">
         <h2 class="visually-hidden">Услуги и условия</h2>
-        <div class="item">
+        <div class="item materials">
           <h3>Материалы</h3>
           <a href="#">На любой вкус</a>
         </div>
-        <div class="item">
+        <div class="item instrument">
           <h3>Инструмент</h3>
           <a href="#">На все случаи</a>
         </div>
-        <div class="item">
+        <div class="item tech">
           <h3>Техника</h3>
           <a href="#">Для стройки</a>
         </div>
@@ -70,11 +74,11 @@
           <button class="button slider-back" type="button">Назад</button>
           <button class="button slider-next" type="button">Вперед</button>
         </div>
-        <div class="item">
+        <div class="item sale">
           <h3>Скидки 50%</h3>
           <a href="#">На 350 товаров</a>
         </div>
-        <div class="item">
+        <div class="item delivery">
           <h3>Доставка</h3>
           <a href="#">Бесплатно</a>
         </div>
@@ -90,23 +94,39 @@
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="past-price">32500 Р.</span>
             <span class="actual-price">25500 Р.</span>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
           <li>
           	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>    
           <li>
           	<img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>   
           <li>
           	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
+            <div class="item-buttons visually-hidden">
+              <a class="buy" href="#">Купить</a>
+              <a class="bookmark-btn" href="#">В закладки</a>
+            </div>
           </li>
         </ul>
       </section>
@@ -145,8 +165,8 @@
       <section class="services">
         <h2>Сервисы</h2>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <div class="slider">          
-          <ul>
+        <div class="slider-services">          
+          <ul class="slider-options">
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Гарантия</a></li>
             <li><a href="#">Кредит</a></li>
@@ -186,16 +206,14 @@
         <div class="about-contacts">
           <h3>Контакты</h3>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
-          <a class="map" href="#"><img src="img/map.jpg" alt="Карта"></a>          
+          <a class="map" href="#"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
           <a class="link about-form" href="#">Заблудились? Напишите нам!</a>
         </div>
       </section>
     </main>
     <footer class="main-footer">
       <div class="footer-information">
-        <a class="main-header-logo">
-          <img src="#" alt="Логотип Техномарта">
-        </a>
+        <a class="main-footer-logo" href="#">Техномарт</a>
         <p class="main-footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7(812)555-05-55</p>
         <div class="footer-navigation">
           <ul class="main-footer-navigation">
@@ -221,8 +239,8 @@
           <li><a class="fb" href="#">Facebook</a></li>
           <li><a class="insta" href="#">Instagram</a></li>
         </ul>
-        <p class="feedback">Обратная связь: mail@htmlacademy.ru</p>
-        <p class="developer">Разработано — htmlacademy.ru</p>
+        <p class="feedback">Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
+        <p class="developer">Разработано — <a href="#">htmlacademy.ru</a></p>
       </div>
     </footer>
     <section class="modal modal-feedback">
